kubernetes/todo_backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-deploy
  labels:
    app: todo-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-backend-app
  template:
    metadata:
      labels:
        app: todo-backend-app
    spec:
      containers:
        - name: todo-backend
          image: ankit8796/todo-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
