kubernetes/todo_backend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  labels:
    app: todo-backend
spec:
  type: NodePort
  selector:
    app: todo-backend-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30008  # Set a fixed port (between 30000-32767)
